--- a/movieproject/Templates/base.html
+++ b/movieproject/Templates/base.html
@@ -13,6 +13,7 @@
     <a class="navbar-brand" href="#">
       Online Movie Store
     </a>
+      <a href="{% url 'movie_app:add_movie' %}" class="btn btn-info">Add Movie</a>
   </div>
 </nav>
 {% block body %}
